--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-observable": "^1.0.0",
-    "rxjs": "^6.2.1"
+    "rxjs": "^6.2.1",
+    "semantic-ui-css": "^2.3.2",
+    "semantic-ui-react": "^0.82.0"
   }
 }
